--- a/ui/src/app/pages/home/home.component.html
+++ b/ui/src/app/pages/home/home.component.html
@@ -12,6 +12,9 @@
                 <p class="lead">
                     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
                 </p>
+                <dr-debug>
+                    <code>This is debug message</code>
+                </dr-debug>
             </div>
 
         </div>
